--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   "dependencies": {
     "express": "^4.11.2",
     "serve-static": "^1.8.1"
-  }
+  },
+  "engines" : { "node" : ">=0.10.32 <0.12" }
 }
