--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "azure-storage": "^0.4.2",
     "express": "^4.11.2",
+    "node-uuid": "^1.4.2",
     "serve-static": "^1.8.1"
   },
   "engines": {
