--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.5",
-    "protractor": "^2.0.0"
+    "protractor": "^2.0.0",
+    "random-js": "^1.0.4"
   }
 }
