--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+
+# Typings directory when VSCode installs typescript definitions
+typings
