First version of new Elm-based vacation expenses page prototype
An expense is currently just a name. The BillPage shows the existing names,
and has controls to add a new name.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ build/Release
 
 # Typings directory when VSCode installs typescript definitions
 typings
+
+# Elm-generated files
+client/elm-stuff
+client/elm.js
